--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,26 @@
-.App {
-  text-align: center;
+body {
+    background-image: url(https://png.pngtree.com/background/20211215/original/pngtree-beautiful-wallpaper-computer-wallpaper-picture-image_1483864.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 100vh;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.base {
+    display: flex;
+    justify-content: center;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+button {
+    padding: 10px;
+    text-transform: uppercase;
+    margin-top: 20px;
+    font-family: "Roboto", sans-serif;
+    color: white;
+    background-color: black;
+}
+h1, h2 {
+    font-family: "Roboto", sans-serif;
+}
+.roboto-light {
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: normal;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
